# MD2FastPDF

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Pipfile  README.md  dev.sh  docker-compose.yml  main.py  pyproject.toml
.agent/rules/: code-style-guide.md
.agent/workflows/: setup-env.md
.agents/rules/: code-style-guide.md
.claude/: settings.local.json
blueprints/narrative/: location-description.md  npc-profile.md  planet-description.md  session-log.md  ship-description.md
config/: settings.default.json  settings.json  settings.py  templates.py
docker/: .env.example  Caddyfile  entrypoint.sh
docs/: Analisi-Tecnica.md  ROADMAP.md  Requisiti-Tecnici.md  Stato-dell-Arte.md  aegis-comms.md  docker-raspberry.md  groups-admin-panel.md  installazione-pyenv-poetry.md  ollama_ubuntu_24_04_guida.md  piano-aegis-chronos.md  piano-aegis-comms.md  piano-aegis-filetree.md  piano-implementazione-oracle.md  rete-lan-caddy-wsl2.md  rete-lan-caddy.md  rimozione-ruflo.md
docs/archive/: CHANGELOG_v1-2.md  (+2 more)
logic/: auth.py  blueprints.py  comms.py  conversion.py  exceptions.py  files.py  groupspace.py  optimizer.py  oracle.py  render.py  settings.py  templates.py
routes/: __init__.py  admin.py  archive.py  auth.py  blueprint.py  comms.py  config.py  core.py  deps.py  editor.py  groupspace.py  login.py  oracle.py  pdf.py  render.py  settings.py
templates/: index.html  shell.html
tests/: conftest.py  test_auth.py  test_blueprints.py  test_blueprints_async.py  test_comms.py  test_comms_async.py  test_groupspace.py  test_groupspace_async.py
(+108 files in other folders)
