[project]
name = "md2fastpdf"
version = "3.9.6"
description = "Spacecraft Documentation Management System // Aegis Class"
authors = [
    {name = "Space Wolf",email = "wolfmanIII@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "anyio (>=4.13.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "bleach (>=6.3.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
